[package]
name = "bungeespoof-proxy-2"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
clap = { version = "4.3.0", features = ["derive"] }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "tokio-macros", "parking_lot", "macros", "io-util", "net"] }
trust-dns-resolver = "0.21.0"
uuid = "1.3.3"
